[package]
name = "harpo"
version = "0.6.0"
authors = ["Thomas Locher (@THLO)"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "The harpo crate provides functionality to secret-share seed phrases."
homepage = "https://github.com/THLO/harpo"
documentation = "https://github.com/THLO/harpo"
repository = "https://github.com/THLO/harpo"
readme = "README.md"

[dependencies]
clap = "~2"
rand = "0.8.0"
num = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.9.8"
